--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,89 +1,143 @@
+<mat-toolbar color="primary">
+  <h1>AQI TRACKER 3000</h1>
+</mat-toolbar>
+<mat-accordion>
+  <mat-expansion-panel>
+    <mat-expansion-panel-header>
+      <h3>PACIFICA, CA</h3>
+    </mat-expansion-panel-header>
+    <div fxLayout="row" style="display: flex;">
+      <div id='PurpleAirWidget_19705_module_AQI_conversion_C0_average_10_layer_standard' class="widget-item">Loading
+        PurpleAir Widget...
+      </div>
+      <script class="widget-item" src='./../assets/widgets/1.js'>
+      </script>
+      <div id='PurpleAirWidget_20119_module_AQI_conversion_C0_average_10_layer_standard'>Loading PurpleAir Widget...
+      </div>
+      <script
+        src='https://www.purpleair.com/pa.widget.js?key=1NHE6FNSY542VU4O&module=AQI&conversion=C0&average=10&layer=standard&container=PurpleAirWidget_20119_module_AQI_conversion_C0_average_10_layer_standard'>
+      </script>
+      <div id='PurpleAirWidget_3934_module_AQI_conversion_C0_average_10_layer_standard'>Loading PurpleAir Widget...
+      </div>
+      <script
+        src='https://www.purpleair.com/pa.widget.js?key=B6VIWXQJY1BUEJLJ&module=AQI&conversion=C0&average=10&layer=standard&container=PurpleAirWidget_3934_module_AQI_conversion_C0_average_10_layer_standard'>
+      </script>
+    </div>
+  </mat-expansion-panel>
 
-<h3 style="font-size:300%;">PACIFICA, CA:</h3>
-<p></p>
-<p></p>
-<div id='PurpleAirWidget_19705_module_AQI_conversion_C0_average_10_layer_standard'>Loading PurpleAir Widget...</div>
-<script
-  src='https://www.purpleair.com/pa.widget.js?key=G0XSWU6X6D15O7VA&module=AQI&conversion=C0&average=10&layer=standard&container=PurpleAirWidget_19705_module_AQI_conversion_C0_average_10_layer_standard'>
-</script>
-<div id='PurpleAirWidget_20119_module_AQI_conversion_C0_average_10_layer_standard'>Loading PurpleAir Widget...</div>
-<script
-  src='https://www.purpleair.com/pa.widget.js?key=1NHE6FNSY542VU4O&module=AQI&conversion=C0&average=10&layer=standard&container=PurpleAirWidget_20119_module_AQI_conversion_C0_average_10_layer_standard'>
-</script>
-<div id='PurpleAirWidget_3934_module_AQI_conversion_C0_average_10_layer_standard'>Loading PurpleAir Widget...</div>
-<script
-  src='https://www.purpleair.com/pa.widget.js?key=B6VIWXQJY1BUEJLJ&module=AQI&conversion=C0&average=10&layer=standard&container=PurpleAirWidget_3934_module_AQI_conversion_C0_average_10_layer_standard'>
-</script>
-<br>
-<br>
-<h3 style="font-size:300%;">For Lupin/Orange average these:</h3>
-<div id='PurpleAirWidget_24873_module_AQI_conversion_C0_average_10_layer_standard'>Loading PurpleAir Widget...</div>
-<script
-  src='https://www.purpleair.com/pa.widget.js?key=54K85Q43I33BCLWP&module=AQI&conversion=C0&average=10&layer=standard&container=PurpleAirWidget_24873_module_AQI_conversion_C0_average_10_layer_standard'>
-</script>
-<div id='PurpleAirWidget_20707_module_AQI_conversion_C0_average_10_layer_standard'>Loading PurpleAir Widget...</div>
-<script
-  src='https://www.purpleair.com/pa.widget.js?key=1052P9ALN0O8N30E&module=AQI&conversion=C0&average=10&layer=standard&container=PurpleAirWidget_20707_module_AQI_conversion_C0_average_10_layer_standard'>
-</script>
-<div id='PurpleAirWidget_37021_module_AQI_conversion_C0_average_10_layer_standard'>Loading PurpleAir Widget...</div>
-<script
-  src='https://www.purpleair.com/pa.widget.js?key=PMWGYB07N4CDBH23&module=AQI&conversion=C0&average=10&layer=standard&container=PurpleAirWidget_37021_module_AQI_conversion_C0_average_10_layer_standard'>
-</script>
-<br>
-<br>
-<h3 style="font-size:300%;">For Lisa average these:</h3>
-<div id='PurpleAirWidget_42429_module_AQI_conversion_C0_average_10_layer_standard'>Loading PurpleAir Widget...</div>
-<script
-  src='https://www.purpleair.com/pa.widget.js?key=2QIADIVUH2VVH8EQ&module=AQI&conversion=C0&average=10&layer=standard&container=PurpleAirWidget_42429_module_AQI_conversion_C0_average_10_layer_standard'>
-</script>
-<div id='PurpleAirWidget_19171_module_AQI_conversion_C0_average_10_layer_standard'>Loading PurpleAir Widget...</div>
-<script
-  src='https://www.purpleair.com/pa.widget.js?key=1B8JNEQ6A0XBRR66&module=AQI&conversion=C0&average=10&layer=standard&container=PurpleAirWidget_19171_module_AQI_conversion_C0_average_10_layer_standard'>
-</script>
-<br>
-<h3 style="font-size:300%;">Mill Valley:</h3>
-<div id='PurpleAirWidget_4896_module_AQI_conversion_C0_average_10_layer_standard'>Loading PurpleAir Widget...</div>
-<script
-  src='https://www.purpleair.com/pa.widget.js?key=1YK5CTMH6UNFF04I&module=AQI&conversion=C0&average=10&layer=standard&container=PurpleAirWidget_4896_module_AQI_conversion_C0_average_10_layer_standard'>
-</script>
-<br>
-<br>
-<h3 style="font-size:300%;">For Bolinas average these:</h3>
-<div id='PurpleAirWidget_38459_module_AQI_conversion_C0_average_10_layer_standard'>Loading PurpleAir Widget...</div>
-<script
-  src='https://www.purpleair.com/pa.widget.js?key=292A89P3U08SG6DA&module=AQI&conversion=C0&average=10&layer=standard&container=PurpleAirWidget_38459_module_AQI_conversion_C0_average_10_layer_standard'>
-</script>
-<div id='PurpleAirWidget_53395_module_AQI_conversion_C0_average_10_layer_standard'>Loading PurpleAir Widget...</div>
-<script
-  src='https://www.purpleair.com/pa.widget.js?key=3E9MRY1QRD4E6H37&module=AQI&conversion=C0&average=10&layer=standard&container=PurpleAirWidget_53395_module_AQI_conversion_C0_average_10_layer_standard'>
-</script>
-<br>
-<br>
-<br>
-<br>
-<h3 style="font-size:300%;">Some more custom ones of note:</h3>
-<h3 style="font-size:300%;">SMMC:</h3>
-<div id='PurpleAirWidget_18565_module_AQI_conversion_C0_average_10_layer_standard'>Loading PurpleAir Widget...</div>
-<script
-  src='https://www.purpleair.com/pa.widget.js?key=3KFMY8WPSLJSOK1N&module=AQI&conversion=C0&average=10&layer=standard&container=PurpleAirWidget_18565_module_AQI_conversion_C0_average_10_layer_standard'>
-</script>
-<br>
-<h3 style="font-size:300%;">SOMA:</h3>
-<div id='PurpleAirWidget_19657_module_AQI_conversion_C0_average_10_layer_standard'>Loading PurpleAir Widget...</div>
-<script
-  src='https://www.purpleair.com/pa.widget.js?key=C3VJ9Y71FMHHI0LR&module=AQI&conversion=C0&average=10&layer=standard&container=PurpleAirWidget_19657_module_AQI_conversion_C0_average_10_layer_standard'>
-</script>
-<br>
-<h3 style="font-size:300%;">Valencia (Saugus):</h3>
-<div id='PurpleAirWidget_6456_module_AQI_conversion_C0_average_10_layer_standard'>Loading PurpleAir Widget...</div>
-<script
-  src='https://www.purpleair.com/pa.widget.js?key=3FJS83ZS51IHFSFG&module=AQI&conversion=C0&average=10&layer=standard&container=PurpleAirWidget_6456_module_AQI_conversion_C0_average_10_layer_standard'>
-</script>
-<br>
-<h3 style="font-size:300%;">CalPoly:</h3>
-<div id='PurpleAirWidget_11856_module_AQI_conversion_C0_average_10_layer_standard'>Loading PurpleAir Widget...</div>
-<script
-  src='https://www.purpleair.com/pa.widget.js?key=1YJIBW03P2RZF796&module=AQI&conversion=C0&average=10&layer=standard&container=PurpleAirWidget_11856_module_AQI_conversion_C0_average_10_layer_standard'>
-</script>
-<br>
-<br>
+
+  <mat-expansion-panel>
+    <mat-expansion-panel-header>
+      <h3>LUPIN/ORANGE</h3>
+    </mat-expansion-panel-header>
+    <div fxLayout="row" style="display: flex;">
+      <div id='PurpleAirWidget_24873_module_AQI_conversion_C0_average_10_layer_standard'>Loading PurpleAir Widget...
+      </div>
+      <script
+        src='https://www.purpleair.com/pa.widget.js?key=54K85Q43I33BCLWP&module=AQI&conversion=C0&average=10&layer=standard&container=PurpleAirWidget_24873_module_AQI_conversion_C0_average_10_layer_standard'>
+      </script>
+      <div id='PurpleAirWidget_20707_module_AQI_conversion_C0_average_10_layer_standard'>Loading PurpleAir Widget...
+      </div>
+      <script
+        src='https://www.purpleair.com/pa.widget.js?key=1052P9ALN0O8N30E&module=AQI&conversion=C0&average=10&layer=standard&container=PurpleAirWidget_20707_module_AQI_conversion_C0_average_10_layer_standard'>
+      </script>
+      <div id='PurpleAirWidget_37021_module_AQI_conversion_C0_average_10_layer_standard'>Loading PurpleAir Widget...
+      </div>
+      <script
+        src='https://www.purpleair.com/pa.widget.js?key=PMWGYB07N4CDBH23&module=AQI&conversion=C0&average=10&layer=standard&container=PurpleAirWidget_37021_module_AQI_conversion_C0_average_10_layer_standard'>
+      </script>
+    </div>
+  </mat-expansion-panel>
+
+
+  <mat-expansion-panel>
+    <mat-expansion-panel-header>
+      <h3>LISA'S LOCATIONS</h3>
+    </mat-expansion-panel-header>
+    <div fxLayout="row" style="display: flex;">
+      <div id='PurpleAirWidget_42429_module_AQI_conversion_C0_average_10_layer_standard'>Loading PurpleAir Widget...
+      </div>
+      <script
+        src='https://www.purpleair.com/pa.widget.js?key=2QIADIVUH2VVH8EQ&module=AQI&conversion=C0&average=10&layer=standard&container=PurpleAirWidget_42429_module_AQI_conversion_C0_average_10_layer_standard'>
+      </script>
+      <div id='PurpleAirWidget_19171_module_AQI_conversion_C0_average_10_layer_standard'>Loading PurpleAir Widget...
+      </div>
+      <script
+        src='https://www.purpleair.com/pa.widget.js?key=1B8JNEQ6A0XBRR66&module=AQI&conversion=C0&average=10&layer=standard&container=PurpleAirWidget_19171_module_AQI_conversion_C0_average_10_layer_standard'>
+      </script>
+    </div>
+  </mat-expansion-panel>
+
+
+  <mat-expansion-panel>
+    <mat-expansion-panel-header>
+      <h3>MILL VALLEY</h3>
+    </mat-expansion-panel-header>
+    <div fxLayout="row" style="display: flex;">
+      <div id='PurpleAirWidget_4896_module_AQI_conversion_C0_average_10_layer_standard'>Loading PurpleAir Widget...
+      </div>
+      <script
+        src='https://www.purpleair.com/pa.widget.js?key=1YK5CTMH6UNFF04I&module=AQI&conversion=C0&average=10&layer=standard&container=PurpleAirWidget_4896_module_AQI_conversion_C0_average_10_layer_standard'>
+      </script>
+    </div>
+  </mat-expansion-panel>
+</mat-accordion>
+
+
+<mat-expansion-panel>
+  <mat-expansion-panel-header>
+    <h3>BOLINAS</h3>
+  </mat-expansion-panel-header>
+  <div fxLayout="row" style="display: flex;">
+    <div id='PurpleAirWidget_38459_module_AQI_conversion_C0_average_10_layer_standard'>Loading PurpleAir Widget...</div>
+    <script
+      src='https://www.purpleair.com/pa.widget.js?key=292A89P3U08SG6DA&module=AQI&conversion=C0&average=10&layer=standard&container=PurpleAirWidget_38459_module_AQI_conversion_C0_average_10_layer_standard'>
+    </script>
+    <div id='PurpleAirWidget_53395_module_AQI_conversion_C0_average_10_layer_standard'>Loading PurpleAir Widget...</div>
+    <script
+      src='https://www.purpleair.com/pa.widget.js?key=3E9MRY1QRD4E6H37&module=AQI&conversion=C0&average=10&layer=standard&container=PurpleAirWidget_53395_module_AQI_conversion_C0_average_10_layer_standard'>
+    </script>
+
+  </div>
+</mat-expansion-panel>
+
+<mat-expansion-panel>
+  <mat-expansion-panel-header>
+    <h3>SMMc</h3>
+  </mat-expansion-panel-header>
+
+  <div id='PurpleAirWidget_18565_module_AQI_conversion_C0_average_10_layer_standard'>Loading PurpleAir Widget...</div>
+  <script
+    src='https://www.purpleair.com/pa.widget.js?key=3KFMY8WPSLJSOK1N&module=AQI&conversion=C0&average=10&layer=standard&container=PurpleAirWidget_18565_module_AQI_conversion_C0_average_10_layer_standard'>
+  </script>
+
+</mat-expansion-panel>
+<mat-expansion-panel>
+  <mat-expansion-panel-header>
+    <h3>SOMA</h3>
+  </mat-expansion-panel-header>
+  <div id='PurpleAirWidget_19657_module_AQI_conversion_C0_average_10_layer_standard'>Loading PurpleAir Widget...</div>
+  <script
+    src='https://www.purpleair.com/pa.widget.js?key=C3VJ9Y71FMHHI0LR&module=AQI&conversion=C0&average=10&layer=standard&container=PurpleAirWidget_19657_module_AQI_conversion_C0_average_10_layer_standard'>
+  </script>
+</mat-expansion-panel>
+
+<mat-expansion-panel>
+  <mat-expansion-panel-header>
+    <h3>VALENCIA (SAUGUS)</h3>
+  </mat-expansion-panel-header>
+
+  <div id='PurpleAirWidget_6456_module_AQI_conversion_C0_average_10_layer_standard'>Loading PurpleAir Widget...</div>
+  <script
+    src='https://www.purpleair.com/pa.widget.js?key=3FJS83ZS51IHFSFG&module=AQI&conversion=C0&average=10&layer=standard&container=PurpleAirWidget_6456_module_AQI_conversion_C0_average_10_layer_standard'>
+  </script>
+</mat-expansion-panel>
+<mat-expansion-panel>
+  <mat-expansion-panel-header>
+    <h3>CAL POLY</h3>
+  </mat-expansion-panel-header>
+  <div id='PurpleAirWidget_11856_module_AQI_conversion_C0_average_10_layer_standard'>Loading PurpleAir Widget...</div>
+  <script
+    src='https://www.purpleair.com/pa.widget.js?key=1YJIBW03P2RZF796&module=AQI&conversion=C0&average=10&layer=standard&container=PurpleAirWidget_11856_module_AQI_conversion_C0_average_10_layer_standard'>
+  </script>
+</mat-expansion-panel>
